logs/dag_id=time_task/run_id=manual__2023-05-31T13:09:08.460496+00:00/task_id=insert_values/attempt=1.log
[2023-05-31T13:09:09.410+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: time_task.insert_values manual__2023-05-31T13:09:08.460496+00:00 [queued]>
[2023-05-31T13:09:09.416+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: time_task.insert_values manual__2023-05-31T13:09:08.460496+00:00 [queued]>
[2023-05-31T13:09:09.416+0000] {taskinstance.py:1288} INFO - 
--------------------------------------------------------------------------------
[2023-05-31T13:09:09.416+0000] {taskinstance.py:1289} INFO - Starting attempt 1 of 1
[2023-05-31T13:09:09.417+0000] {taskinstance.py:1290} INFO - 
--------------------------------------------------------------------------------
[2023-05-31T13:09:09.424+0000] {taskinstance.py:1309} INFO - Executing <Task(PostgresOperator): insert_values> on 2023-05-31 13:09:08.460496+00:00
[2023-05-31T13:09:09.427+0000] {standard_task_runner.py:55} INFO - Started process 304 to run task
[2023-05-31T13:09:09.431+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'time_task', 'insert_values', 'manual__2023-05-31T13:09:08.460496+00:00', '--job-id', '8', '--raw', '--subdir', 'DAGS_FOLDER/insertTime.py', '--cfg-path', '/tmp/tmppq43qpfw']
[2023-05-31T13:09:09.431+0000] {standard_task_runner.py:83} INFO - Job 8: Subtask insert_values
[2023-05-31T13:09:09.479+0000] {task_command.py:389} INFO - Running <TaskInstance: time_task.insert_values manual__2023-05-31T13:09:08.460496+00:00 [running]> on host b61c8577f382
[2023-05-31T13:09:09.499+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.7/site-packages/***/utils/context.py:205: AirflowContextDeprecationWarning: Accessing 'execution_date' from the template is deprecated and will be removed in a future version. Please use 'data_interval_start' or 'logical_date' instead.
  warnings.warn(_create_deprecation_warning(key, self._deprecation_replacements[key]))

[2023-05-31T13:09:09.526+0000] {taskinstance.py:1518} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=time_task
AIRFLOW_CTX_TASK_ID=insert_values
AIRFLOW_CTX_EXECUTION_DATE=2023-05-31T13:09:08.460496+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-05-31T13:09:08.460496+00:00
[2023-05-31T13:09:09.527+0000] {sql.py:254} INFO - Executing: 
                INSERT INTO myTime VALUES (2023-05-31T13:09:08.460496+00:00);   
        
[2023-05-31T13:09:09.534+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-05-31T13:09:09.638+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-05-31T13:09:09.643+0000] {sql.py:375} INFO - Running statement: 
                INSERT INTO myTime VALUES (2023-05-31T13:09:08.460496+00:00);   
        , parameters: None
[2023-05-31T13:09:09.644+0000] {taskinstance.py:1776} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "T13"
LINE 2: ...             INSERT INTO myTime VALUES (2023-05-31T13:09:08....
                                                             ^

[2023-05-31T13:09:09.652+0000] {taskinstance.py:1332} INFO - Marking task as FAILED. dag_id=time_task, task_id=insert_values, execution_date=20230531T130908, start_date=20230531T130909, end_date=20230531T130909
[2023-05-31T13:09:09.658+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 8 for task insert_values (syntax error at or near "T13"
LINE 2: ...             INSERT INTO myTime VALUES (2023-05-31T13:09:08....
                                                             ^
; 304)
[2023-05-31T13:09:09.687+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-05-31T13:09:09.701+0000] {taskinstance.py:2596} INFO - 0 downstream tasks scheduled from follow-on schedule check
